--- a/src/Resources/views/base.html.twig
+++ b/src/Resources/views/base.html.twig
@@ -7,48 +7,51 @@
 
     <title>{% block title %}Glynn admin{% endblock %}</title>
     <meta name="description" content="{% block description %}{% endblock %}">
+    {% block meta %}
 
+    {% endblock %}
     <link rel="stylesheet" href="{{ asset('build/site.css') }}">
 </head>
 <body>
+{% block navbar %}
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="{{ path('home_index') }}">Glynn site</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-        <a class="navbar-brand" href="{{ path('home_index') }}">Glynn site</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="main-navbar">
-            {{ knp_menu_render('glynn-site', {'currentClass': 'active', 'ancestorClass': 'active', 'depth':2, 'template': 'admin/menu.html.twig'}) }}
-            <ul class="navbar-nav ml-auto">
-                {% if app.user %}
-                    <li class="nav-item">
-                        <a href="{{ path('fos_user_profile_show') }}" class="nav-link">
-                            <i class="fa fa-user"></i>
-                            {{ app.user.username }}
-                        </a>
-                    </li>
-                    {% if is_granted('ROLE_ADMIN') %}
+            <div class="collapse navbar-collapse" id="main-navbar">
+                {{ knp_menu_render('glynn-site', {'currentClass': 'active', 'ancestorClass': 'active', 'depth':2, 'template': 'admin/menu.html.twig'}) }}
+                <ul class="navbar-nav ml-auto">
+                    {% if app.user %}
                         <li class="nav-item">
-                            <a href="{{ path('admin_dashboard_index') }}" class="nav-link">
-                                <i class="fa fa-tachometer"></i>
-                                {{ 'app.admin' | trans }}
+                            <a href="{{ path('fos_user_profile_show') }}" class="nav-link">
+                                <i class="fa fa-user"></i>
+                                {{ app.user.username }}
+                            </a>
+                        </li>
+                        {% if is_granted('ROLE_ADMIN') %}
+                            <li class="nav-item">
+                                <a href="{{ path('admin_dashboard_index') }}" class="nav-link">
+                                    <i class="fa fa-tachometer-alt"></i>
+                                    {{ 'app.admin' | trans }}
+                                </a>
+                            </li>
+                        {% endif %}
+                    {% else %}
+                        <li class="nav-item">
+                            <a href="{{ path('fos_user_security_login') }}" class="nav-link">
+                                {{ 'app.login' | trans }}
                             </a>
                         </li>
                     {% endif %}
-                {% else %}
-                    <li class="nav-item">
-                        <a href="{{ path('fos_user_security_login') }}" class="nav-link">
-                            {{ 'app.login' | trans }}
-                        </a>
-                    </li>
-                {% endif %}
-            </ul>
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
+{% endblock %}
+
 {% block body %}{% endblock %}
 {% block javascripts %}
     <script src="{{ asset('build/site.js') }}"></script>
