--- a/src/Resources/views/base.html.twig
+++ b/src/Resources/views/base.html.twig
@@ -8,7 +8,7 @@
     <title>{% block title %}Glynn admin{% endblock %}</title>
     <meta name="description" content="{% block description %}{% endblock %}">
     {% block meta %}
-
+        {{ include('@GlynnTemplate/_meta.html.twig') }}
     {% endblock %}
     <link rel="stylesheet" href="{{ asset('build/site.css') }}">
 </head>
@@ -51,8 +51,9 @@
         </div>
     </nav>
 {% endblock %}
-
-{% block body %}{% endblock %}
+<div id="base">
+    {% block body %}{% endblock %}
+</div>
 {% block javascripts %}
     <script src="{{ asset('build/site.js') }}"></script>
 {% endblock %}
