--- a/src/Resources/views/admin.html.twig
+++ b/src/Resources/views/admin.html.twig
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>{% block title %}Glynn admin{% endblock %}</title>
+    <title>{% block title %}{{ 'admin.head.title' | trans }}{% endblock %}</title>
     <meta name="description" content="{% block description %}{% endblock %}">
     {% block meta %}
         {{ include('@GlynnTemplate/_meta.html.twig') }}
@@ -20,17 +20,17 @@
         <div class="sidebar navbar navbar-expand-lg navbar-dark d-lg-block px-0">
             <div class="text-lg-center py-3 px-3">
                 <a class="site-title" href="{{ path('home_index') }}">
-                    <img src="{{ asset("admin/barista-icons_coffea-arabica.svg") }}" alt="" title="">
+                    <img src="{{ asset("admin/barista-icons_coffea-arabica.svg") }}" alt="{{ 'admin.nav.title_alt' | trans }}" title="">
                     <span class="hidden-lg-up">
-                        Glynn admin
+                        {{ 'admin.nav.title' | trans }}
                     </span>
                 </a>
             </div>
             <button class="navbar-toggler mr-3" type="button" data-toggle="collapse" data-target="#main-menu"
-                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    aria-controls="navbarText" aria-expanded="false" aria-label="{{ 'admin.nav.toggle_navigation' | trans }}">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="main-menu">
+            <div class="collapse navbar-collapse" id="main-menu" role="navigation">
                 <div class="col-12 px-0">
                     {% if app.user %}
                         <div class="dropdown float-right">
@@ -39,10 +39,10 @@
                             </a>
                             <div class="dropdown-menu dropdown-menu-right">
                                 <a class="dropdown-item" href="{{ path('fos_user_profile_show') }}">
-                                    <i class="fa fa-user"></i> Profile
+                                    <i class="fa fa-user"></i> {{ 'admin.nav.profile' | trans }}
                                 </a>
                                 <a class="dropdown-item" href="{{ path('fos_user_security_logout') }}">
-                                    <i class="fa fa-sign-out-alt"></i> Logout
+                                    <i class="fa fa-sign-out-alt"></i> {{ 'admin.nav.logout' | trans }}
                                 </a>
                             </div>
                         </div>
@@ -51,7 +51,7 @@
                                 <div class="media-left">
                                     <img src="{{ gravatar(app.user.email) }}"
                                          class="rounded img-fluid sidebar-user-img pr-3"
-                                         alt="Profile image">
+                                         alt="{{ 'admin.nav.profile_image' | trans }}">
                                 </div>
                                 <div class="media-body">
                                     <h4 class="media-heading">
@@ -68,12 +68,20 @@
         </div>
     </div>
 
-    <div class="page-body" id="base">
+    <div class="page-body" id="base" role="main">
         <div class="page-main-bg">
+            {% block page_title %}
+                <div class="bg-dark text-white py-3">
+                    <div class="container">
+                        <h1>{% block page_title_text %}{{ 'admin.main.title' | trans }}{% endblock %}</h1>
+                    </div>
+                </div>
+            {% endblock %}
             {% block body %}{% endblock %}
         </div>
     </div>
 </div>
+
 {% block javascripts %}
     <script src="{{ asset('build/admin.js') }}"></script>
 {% endblock %}
