--- a/src/Resources/views/base.html.twig
+++ b/src/Resources/views/base.html.twig
@@ -29,32 +29,42 @@
             </button>
 
             <div class="collapse navbar-collapse" id="main-navbar">
-                {{ knp_menu_render('glynn-site', {'currentClass': 'active', 'ancestorClass': 'active', 'depth':2, 'template': 'admin/menu.html.twig'}) }}
-                <ul class="navbar-nav ml-auto">
-                    {% if app.user %}
-                        <li class="nav-item">
-                            <a href="{{ path('fos_user_profile_show') }}" class="nav-link">
-                                <i class="fa fa-user"></i>
-                                {{ app.user.username }}
-                            </a>
-                        </li>
-                        {% if is_granted('ROLE_ADMIN') %}
+                {% block navbar_menu %}
+                    {{ knp_menu_render('glynn-site', {'currentClass': 'active', 'ancestorClass': 'active', 'depth':2, 'template': 'admin/menu.html.twig'}) }}
+                {% endblock %}
+                {% block navbar_user %}
+                    <ul class="navbar-nav ml-auto">
+                        {% if app.user %}
+                            {% if is_granted('ROLE_ADMIN') %}
+                                <li class="nav-item">
+                                    <a href="{{ path('admin_dashboard_index') }}" class="nav-link">
+                                        <i class="fa fa-tachometer-alt"></i>
+                                        {{ 'site.navbar.admin' | trans }}
+                                    </a>
+                                </li>
+                            {% endif %}
                             <li class="nav-item">
-                                <a href="{{ path('admin_dashboard_index') }}" class="nav-link">
-                                    <i class="fa fa-tachometer-alt"></i>
-                                    {{ 'site.navbar.admin' | trans }}
+                                <a href="{{ path('fos_user_profile_show') }}" class="nav-link">
+                                    <i class="fa fa-user"></i>
+                                    {{ app.user.username }}
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="{{ path('fos_user_security_logout') }}" class="nav-link">
+                                    <i class="fa fa-sign-out-alt"></i>
+                                    {{ 'site.navbar.logout' | trans }}
+                                </a>
+                            </li>
+                        {% else %}
+                            <li class="nav-item">
+                                <a href="{{ path('fos_user_security_login') }}" class="nav-link">
+                                    <i class="fa fa-user"></i>
+                                    {{ 'site.navbar.login' | trans }}
                                 </a>
                             </li>
                         {% endif %}
-                    {% else %}
-                        <li class="nav-item">
-                            <a href="{{ path('fos_user_security_login') }}" class="nav-link">
-                                <i class="fa fa-user"></i>
-                                {{ 'site.navbar.login' | trans }}
-                            </a>
-                        </li>
-                    {% endif %}
-                </ul>
+                    </ul>
+                {% endblock %}
             </div>
         </div>
     </nav>
@@ -62,6 +72,7 @@
 <div id="base">
     {% block body %}{% endblock %}
 </div>
+{% block footer %}{% endblock %}
 {% block javascripts %}
     <script src="{{ asset('build/site.js') }}"></script>
 {% endblock %}
