--- a/src/Resources/views/_meta.html.twig
+++ b/src/Resources/views/_meta.html.twig
@@ -13,7 +13,7 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="apple-mobile-web-app-title" content="{{ 'site.navbar.title' | trans }}">
 <link rel="yandex-tableau-widget" href="{{ asset('/icons/yandex-browser-manifest.json') }}">
-<link rel="icon" type="image/png" sizes="228x228" href="{{ asset('/icons/coast-228x228.png') }}'">
+<link rel="icon" type="image/png" sizes="228x228" href="{{ asset('/icons/coast-228x228.png') }}">
 <link rel="manifest" href="{{ asset('/icons/manifest.json') }}">
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="theme-color" content="#3d566e">
@@ -22,9 +22,9 @@
 <link rel="icon" type="image/png" sizes="16x16" href="{{ asset('/icons/favicon-16x16.png') }}">
 <link rel="shortcut icon" href="{{ asset('/icons/favicon.ico') }}">
 <meta name="msapplication-TileColor" content="#3d566e">
-<meta name="msapplication-TileImage" content="{{ asset('/icons/mstile-144x144.png') }}'">
+<meta name="msapplication-TileImage" content="{{ asset('/icons/mstile-144x144.png') }}">
 <meta name="msapplication-config" content="{{ asset('/icons/browserconfig.xml') }}">
-<link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 480px) and (-webkit-device-pixel-ratio: 1)" href="{{ asset('/icons/apple-touch-startup-image-320x460.png') }}'">
+<link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 480px) and (-webkit-device-pixel-ratio: 1)" href="{{ asset('/icons/apple-touch-startup-image-320x460.png') }}">
 <link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 480px) and (-webkit-device-pixel-ratio: 2)" href="{{ asset('/icons/apple-touch-startup-image-640x920.png') }}">
 <link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" href="{{ asset('/icons/apple-touch-startup-image-640x1096.png') }}">
 <link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" href="{{ asset('/icons/apple-touch-startup-image-750x1294.png') }}">
