--- a/src/Resources/views/base.html.twig
+++ b/src/Resources/views/base.html.twig
@@ -70,6 +70,20 @@
     </nav>
 {% endblock %}
 <div id="base">
+    {% block flash_messages %}
+        {% for label, messages in app.flashes %}
+            {% for message in messages %}
+                <div class="container pt-3">
+                    <div class="alert alert-{{ label }} alert-dismissible fade show">
+                        {{ message }}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                </div>
+            {% endfor %}
+        {% endfor %}
+    {% endblock %}
     {% block body %}{% endblock %}
 </div>
 {% block footer %}{% endblock %}
