Added menu bundle for menus

--- a/src/Resources/views/admin.html.twig
+++ b/src/Resources/views/admin.html.twig
@@ -64,7 +64,7 @@
                             </div>
                         </a>
                     {% endif %}
-                    {{ knp_menu_render('glynn-admin', {'currentClass': 'active', 'ancestorClass': 'active', 'depth':3, 'template': 'admin/menu.html.twig'}) }}
+                    {{ knp_menu_render('admin', {'currentClass': 'active', 'ancestorClass': 'active', 'depth':3, 'template': 'admin/menu.html.twig'}) }}
                 </div>
             </div>
         </div>
