--- a/src/Resources/views/admin.html.twig
+++ b/src/Resources/views/admin.html.twig
@@ -82,8 +82,8 @@
             {% block flash_messages %}
                 {% for label, messages in app.flashes %}
                     {% for message in messages %}
-                        <div class="container pt-3">
-                            <div class="alert alert-{{ label }} alert-dismissible fade show">
+                        <div class="container">
+                            <div class="alert alert-{{ label }} alert-dismissible fade show mt-3">
                                 {{ message }}
                                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                                     <span aria-hidden="true">&times;</span>
