--- a/src/Resources/views/base.html.twig
+++ b/src/Resources/views/base.html.twig
@@ -23,9 +23,8 @@
         {{ encore_entry_link_tags('site') }}
     {% endblock %}
 </head>
-{% block body %}
-    <body>
-    {% block wrapper %}
+<body>
+{% block wrapper %}
     {% block header %}
         <nav class="navbar navbar-expand-lg {% block navbar_nav_class %}navbar-light bg-light{% endblock %}">
             <div class="container">
@@ -77,33 +76,32 @@
             </div>
         </nav>
     {% endblock %}
-        <div id="base">
-            {% block flash_messages %}
-                {% for label, messages in app.flashes %}
-                    {% for message in messages %}
-                        <div class="container pt-3">
-                            <div class="alert alert-{{ label }} alert-dismissible fade show">
-                                {{ message }}
-                                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
+    <div id="base">
+        {% block flash_messages %}
+            {% for label, messages in app.flashes %}
+                {% for message in messages %}
+                    <div class="container pt-3">
+                        <div class="alert alert-{{ label }} alert-dismissible fade show">
+                            {{ message }}
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
                         </div>
-                    {% endfor %}
+                    </div>
                 {% endfor %}
-            {% endblock %}
-            {% block content_header %}
-            {% endblock %}
-            {% block content %}
-                {% block main %}{% endblock %}
-            {% endblock %}
-            {% block content_footer %}
-            {% endblock %}
-        </div>
+            {% endfor %}
+        {% endblock %}
+        {% block content_header %}
+        {% endblock %}
+        {% block content %}
+            {% block body %}{% endblock %}
+        {% endblock %}
+        {% block content_footer %}
+        {% endblock %}
+    </div>
     {% block body_javascript %}
         {{ encore_entry_script_tags('site') }}
     {% endblock %}
-    {% endblock %}
-    </body>
 {% endblock %}
+</body>
 </html>
