--- a/src/Resources/views/admin.html.twig
+++ b/src/Resources/views/admin.html.twig
@@ -42,36 +42,7 @@
                         <div class="col-12 px-0">
                             {% block main_menu_wrapper %}
                                 {% block header_user_menu %}
-                                    {% if app.user %}
-                                        <div class="dropdown float-right">
-                                            <a data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="btn text-muted">
-                                                <i class="fa fa-chevron-down"></i>
-                                            </a>
-                                            <div class="dropdown-menu dropdown-menu-right">
-                                                <a class="dropdown-item" href="{{ path('fos_user_profile_show') }}">
-                                                    <i class="fa fa-user"></i> {{ 'admin.nav.profile' | trans }}
-                                                </a>
-                                                <a class="dropdown-item" href="{{ path('fos_user_security_logout') }}">
-                                                    <i class="fa fa-sign-out-alt"></i> {{ 'admin.nav.logout' | trans }}
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <a class="sidebar-user" href="{{ path('fos_user_profile_show') }}">
-                                            <div class="media">
-                                                <div class="media-left">
-                                                    <img src="{{ gravatar(app.user.email) }}"
-                                                         class="rounded img-fluid sidebar-user-img pr-3"
-                                                         alt="{{ 'admin.nav.profile_image' | trans }}">
-                                                </div>
-                                                <div class="media-body">
-                                                    <h4 class="media-heading">
-                                                        {{ app.user.username }}
-                                                    </h4>
-                                                    {{ app.user.email }}
-                                                </div>
-                                            </div>
-                                        </a>
-                                    {% endif %}
+                                    asdasd
                                 {% endblock %}
 
                                 {{ knp_menu_render('admin', {'currentClass': 'active', 'ancestorClass': 'active', 'depth':3, 'template': 'admin/menu.html.twig'}) }}
