--- a/src/Resources/views/base.html.twig
+++ b/src/Resources/views/base.html.twig
@@ -1,7 +1,7 @@
 {%- trans_default_domain 'glynn-theme' -%}
 
 <!DOCTYPE html>
-<html>
+<html lang="{{ app.request.locale|split('_')|first|default('en') }}" data-bs-theme="{% block site_theme %}dark{% endblock %}">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,7 +26,7 @@
 <body>
 {% block wrapper %}
     {% block header %}
-        <nav class="navbar navbar-expand-lg {% block navbar_nav_class %}navbar-light bg-light{% endblock %}">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container">
                 <a class="navbar-brand" href="{{ path('home_index') }}">{% block navbar_brand %}{{ 'site.navbar.title' | trans }}{% endblock %}</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="{{ 'site.navbar.toggle_navigation' | trans }}">
@@ -40,7 +40,7 @@
                         {% endblock %}
                     {% endblock %}
                     {% block user_menu %}
-                        <ul class="navbar-nav ml-auto">
+                        <ul class="navbar-nav ms-auto">
                             {% if app.user %}
                                 {% if is_granted('ROLE_ADMIN') %}
                                     <li class="nav-item">
